@@ -1,16 +1,23 @@
 package seedu.zettel;
 
 import java.io.IOException;
+import java.nio.file.DirectoryStream;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.Paths;
 import java.time.Instant;
 import java.util.ArrayList;
 import java.util.Arrays;
+import java.util.HashSet;
 import java.util.List;
 import java.util.Objects;
+import java.util.Set;
 import java.util.logging.Logger;
 import java.util.stream.Collectors;
+import java.util.stream.Stream;
+
+import seedu.zettel.exceptions.InvalidRepoException;
+import seedu.zettel.exceptions.ZettelException;
 
 
 /**
@@ -36,9 +43,6 @@ public class Storage {
     /** Index file name for notes metadata. */
     static final String REPO_INDEX = "index.txt";
 
-    /** Temporary storage file for note persistence (to be migrated later). */
-    static final String STORAGE_FILE = "zettel.txt";
-
     private static final Logger logger = Logger.getLogger(Storage.class.getName());
   
     /** The root directory path under which repositories are stored; default is data/. */
@@ -47,6 +51,7 @@ public class Storage {
     /** The name of the currently active repository. */
     private String repoName = DEFAULT_REPO;
 
+    private ArrayList<String> repoList = new ArrayList<>();
 
     /**
      * Creates a Storage instance with the specified root directory.
@@ -72,8 +77,38 @@ public class Storage {
             createRepo(DEFAULT_REPO);
         }
 
-        // Can remove this portion after we use a folder of notes
-        createStorageFile(defaultRepoPath);
+        try {
+            loadConfig();
+
+            String checkedOutRepo = readCurrRepo();
+            changeRepo(checkedOutRepo);
+
+            // validate every repo in repoList
+            for (String repo : repoList) {
+                validateRepo(repo);
+            }
+        } catch (ZettelException e) {
+            System.out.println("Error during init: " + e.getMessage());
+        }
+    }
+
+    /**
+     * Reads the currently checked-out repository from .zettelConfig.
+     * Defaults to "main" if line 2 is missing or file is malformed.
+     */
+    public String readCurrRepo() {
+        Path configFile = rootPath.resolve(CONFIG_FILE);
+        try {
+            if (Files.exists(configFile)) {
+                List<String> lines = Files.readAllLines(configFile);
+                if (lines.size() == 2 && !lines.get(1).isBlank()) {
+                    return lines.get(1).trim();
+                }
+            }
+        } catch (IOException e) {
+            System.out.println("Warning: failed to read checked-out repo: " + e.getMessage());
+        }
+        return DEFAULT_REPO;
     }
 
     /** Creates the root folder ("data") for all repositories if it does not exist. */
@@ -87,15 +122,30 @@ public class Storage {
         }
     }
 
-    /** Creates a storage file in the default repository. */
-    private static void createStorageFile(Path defaultRepoPath) {
-        Path filePath = defaultRepoPath.resolve(REPO_NOTES).resolve(STORAGE_FILE);
+    /**
+     * Creates a per-note .txt file for the given Note in the current repository.
+     * Ensures that the repository structure (notes/, archive/, index.txt) exists.
+     *
+     * @param note The Note object to create a file for
+     */
+    public void createStorageFile(Note note) {
+        Path repoPath = rootPath.resolve(repoName);
+        Path notesDir = repoPath.resolve(REPO_NOTES);
+        String noteName = note.getFilename();
+
         try {
-            if (Files.notExists(filePath)) {
-                Files.createFile(filePath);
+            Path noteFile = notesDir.resolve(noteName);
+            if (Files.notExists(noteFile)) {
+                Files.createFile(noteFile);
+                System.out.println("Created note file: " + noteName);
+            } else {
+                System.out.println("Note file already exists. Overwriting... " + noteFile);
             }
+
+            Files.writeString(noteFile, note.getBody() != null ? note.getBody() : "");
+
         } catch (IOException e) {
-            System.out.println("Error creating " + filePath + ".");
+            System.out.println("Error writing note file: " + e.getMessage());
         }
     }
 
@@ -111,10 +161,49 @@ public class Storage {
         try {
             if (Files.notExists(configPath)) {
                 Files.createFile(configPath);
-                Files.writeString(configPath, DEFAULT_REPO);
+                List<String> lines = List.of(DEFAULT_REPO, DEFAULT_REPO);
+                Files.write(configPath, lines);
             }
         } catch (IOException e) {
             System.out.println("Error creating " + CONFIG_FILE + ".");
+        }
+    }
+
+    public void loadConfig() {
+        createConfigFile();
+        Path configFile = rootPath.resolve(CONFIG_FILE);
+
+        try {
+            List<String> lines = Files.readAllLines(configFile);
+            String firstLine = lines.isEmpty() ? DEFAULT_REPO : lines.get(0); // if empty (shouldn't be), use main
+            repoList = Arrays.stream(firstLine.split("\\|"))
+                    .map(String::trim)
+                    .collect(Collectors.toCollection(ArrayList::new));
+        } catch (IOException e) {
+            System.out.println("Error reading .zettelConfig, defaulting to main: " + e.getMessage());
+            repoList = new ArrayList<>();
+            repoList.add("main");
+        }
+    }
+
+    public void updateConfig(String newRepo) throws ZettelException {
+        createConfigFile();
+        Path configFile = rootPath.resolve(CONFIG_FILE);
+
+        try (Stream<String> stream = Files.lines(configFile)){
+            List<String> lines = stream.collect(Collectors.toList());
+            if (lines.isEmpty()) {
+                lines.add(DEFAULT_REPO);
+                lines.add(newRepo);
+            } else if (lines.size() == 1) {
+                lines.add(newRepo);
+            } else {
+                lines.set(1, newRepo);
+            }
+            Files.write(configFile, lines);
+
+        } catch (IOException e) {
+            throw new ZettelException("Failed to update checked-out repo in .zettelConfig: " + e.getMessage());
         }
     }
 
@@ -125,15 +214,113 @@ public class Storage {
      */
     public ArrayList<Note> load() {
         Path repoPath = rootPath.resolve(repoName);
-        Path filePath = repoPath.resolve(REPO_NOTES).resolve(STORAGE_FILE);
+        Path notesDir = repoPath.resolve(REPO_NOTES);
+        Path indexFile = repoPath.resolve(REPO_INDEX);
+
+        ArrayList<Note> notes = new ArrayList<>();
+
+        // Validate repo layout before attempting to read
         try {
-            return Files.lines(filePath)
-                    .map(this::parseSaveFile)
+            validateRepo(repoName);
+        } catch (ZettelException e) {
+            System.out.println("Error validating repo: " + e.getMessage());
+            return notes;
+        }
+
+        try (Stream<String> lines = Files.lines(indexFile)){
+            return lines.map(this::parseSaveFile)
                     .filter(Objects::nonNull)
+                    .map(note -> {
+                        Path bodyFile = notesDir.resolve(note.getFilename());
+                        try {
+                            String body = Files.readString(bodyFile);
+                            note.setBody(body);
+                        } catch (IOException e) {
+                            System.out.println("Warning: cannot read body file for '" +
+                                    note.getTitle() + "': " + e.getMessage());
+                            note.setBody("");
+                        }
+                        return note;
+                    })
                     .collect(Collectors.toCollection(ArrayList::new));
         } catch (IOException e) {
-            System.out.println("Error loading file: " + filePath);
+            System.out.println("Error loading file: " + indexFile);
             return new ArrayList<>();
+        }
+    }
+
+    private void validateRepo(String repoName) throws ZettelException {
+        Path repoPath = rootPath.resolve(repoName);
+        Path notesDir = repoPath.resolve(REPO_NOTES);
+        Path archiveDir = repoPath.resolve(REPO_ARCHIVE);
+        Path indexFile = repoPath.resolve(REPO_INDEX);
+        Path configFile = rootPath.resolve(CONFIG_FILE);
+
+        // critical; .zettelConfig should always exist
+        if (!Files.exists(configFile)) {
+            throw new InvalidRepoException(".zettelConfig missing at " + configFile.toAbsolutePath());
+        }
+
+        createIfMissing(repoPath, "repository folder: " + repoName, true);
+        createIfMissing(notesDir, "notes/ for repo: " + repoName, true);
+        createIfMissing(archiveDir, "archive/ for repo: " + repoName, true);
+        createIfMissing(indexFile, "index.txt for repo: " + repoName, false);
+
+        // Track expected body files
+        Set<String> expectedFiles = new HashSet<>();
+
+        try (Stream<String> lines = Files.lines(indexFile)) {
+            lines.map(this::parseSaveFile)
+                    .filter(Objects::nonNull)
+                    .forEach(note -> {
+                        String fileName = note.getFilename();
+                        expectedFiles.add(fileName);
+
+                        Path bodyFile = notesDir.resolve(fileName);
+                        try {
+                            createIfMissing(bodyFile, "body file for note '" + note.getTitle() + "'", false);
+                        } catch (ZettelException e) {
+                            System.out.println("Warning: " + e.getMessage());
+                        }
+                    });
+        } catch (IOException e) {
+            throw new ZettelException("Failed to read index.txt: " + e.getMessage());
+        }
+
+        detectOrphans(notesDir, expectedFiles, repoName);
+    }
+
+    private void createIfMissing(Path path, String description, boolean isDirectory) throws ZettelException {
+        try {
+            if (Files.notExists(path)) {
+                if (isDirectory) {
+                    Files.createDirectories(path);
+                } else {
+                    Files.createFile(path);
+                }
+                System.out.println("Created missing " + description);
+            }
+        } catch (IOException e) {
+            throw new ZettelException("Failed to create " + description + ": " + e.getMessage());
+        }
+    }
+
+    private void detectOrphans(Path notesDir, Set<String> expectedFiles, String repoName) throws ZettelException {
+        try (DirectoryStream<Path> notesStream = Files.newDirectoryStream(notesDir, "*.txt")) {
+            List<String> orphans = new ArrayList<>();
+            // for every .txt in notes/, if it is not referenced in index.txt, add it to orphans list
+            for (Path p : notesStream) {
+                if (!expectedFiles.contains(p.getFileName().toString())) {
+                    orphans.add(p.getFileName().toString());
+                }
+            }
+            if (!orphans.isEmpty()) {
+                System.out.println("Notice: Found " + orphans.size() +
+                        " orphan note file(s) in repo '" + repoName + "':");
+                orphans.forEach(f -> System.out.println("  - " + f));
+            }
+        } catch (IOException e) {
+            throw new ZettelException("Failed to scan notes directory for orphans: " + e.getMessage());
         }
     }
 
@@ -154,6 +341,8 @@ public class Storage {
             Files.createDirectories(repoPath.resolve(REPO_ARCHIVE));
             Files.createFile(repoPath.resolve(REPO_INDEX));
 
+            addToConfig(repoName);
+            
             logger.info("Repository " + repoName + " successfully created at " + repoPath);
         } catch (IOException e) {
             System.out.println("Error initialising repository " + repoName) ;
@@ -161,17 +350,52 @@ public class Storage {
     }
 
     /**
+     * Appends a new repo name to the first line of .zettelConfig if it doesn't already exist.
+     *
+     * @param repoName The repository name to add
+     */
+    private void addToConfig(String repoName) {
+        createConfigFile();
+        Path configFile = rootPath.resolve(CONFIG_FILE);
+
+        try {
+            List<String> lines = Files.readAllLines(configFile);
+
+            // First line contains all available repo names, pipe separated
+            String firstLine = lines.isEmpty() ? DEFAULT_REPO : lines.get(0);
+            String secondLine = (lines.size() < 2) ? DEFAULT_REPO : lines.get(1);
+
+            if (!firstLine.contains(repoName)) {
+                firstLine = firstLine.concat(" | " + repoName);
+                Files.write(configFile, Arrays.asList(firstLine, secondLine));
+
+                if (!repoList.contains(repoName)) {
+                    repoList.add(repoName);
+                }
+            }
+
+        } catch (IOException e) {
+            System.out.println("Error updating .zettelConfig: " + e.getMessage());
+        }
+    }
+
+    /**
      * Switches the current repository and updates the config file.
      *
-     * @param repoName The repository to switch to.
+     * @param newRepo The repository to switch to.
      */
-    public void changeRepo(String repoName) {
+    public void changeRepo(String newRepo) {
+        if (!repoList.contains(newRepo)) {
+            System.out.println("Repo '" + newRepo + "' does not exist. Falling back to 'main'.");
+            newRepo = "main";
+        }
+
+        this.repoName = newRepo;
+
         try {
-            this.repoName = repoName;
-            Path configPath = rootPath.resolve(CONFIG_FILE);
-            Files.writeString(configPath,repoName);
-        } catch (IOException e) {
-            System.out.println("Unable to change repository to " + repoName);
+            updateConfig(newRepo);
+        } catch (ZettelException e) {
+            System.out.println("Error switching repo: " + e.getMessage());
         }
     }
 
@@ -181,18 +405,23 @@ public class Storage {
      * @param notes The notes to save.
      */
     public void save(List<Note> notes) {
-        Path repoPath = rootPath.resolve(repoName).resolve(REPO_NOTES);
-        Path filePath = repoPath.resolve(STORAGE_FILE);
+        Path indexDir = rootPath.resolve(repoName);   // e.g data/<repoName>
+        Path filePath = indexDir.resolve(REPO_INDEX); // data/<repoName>/index.txt
+
         try {
-            Files.createDirectories(repoPath); // Ensure directory exists
+            Files.createDirectories(indexDir); // Ensure directory exists
 
             List<String> lines = notes.stream()
                     .map(this::toSaveFormat)
                     .collect(Collectors.toList());
 
             Files.write(filePath, lines);
+
+            validateRepo(repoName);
         } catch (IOException e) {
-            System.out.println("Error writing to file: " + e.getMessage());
+            System.out.println("Error writing to index file: " + e.getMessage());
+        } catch (ZettelException e) {
+            System.out.println("Error while validating repo: " + e.getMessage());
         }
     }
 
@@ -205,13 +434,13 @@ public class Storage {
      */
     private String toSaveFormat(Note note) {
         String logsStr = String.join(";;", note.getLogs());
+        String filename = note.getFilename() != null ? note.getFilename() : "";
         String archiveName = note.getArchiveName() != null ? note.getArchiveName() : "";
 
-        return String.format("%s | %s | %s | %s | %s | %s | %s | %s | %s | %s",
+        return String.format("%s | %s | %s | %s | %s | %s | %s | %s | %s",
                 note.getId(),
                 note.getTitle(),
-                note.getFilename(),
-                note.getBody().replace("\n", "\\n"), // Escape newlines in body
+                filename,
                 note.getCreatedAt().toString(),
                 note.getModifiedAt().toString(),
                 note.isPinned() ? "1" : "0",
@@ -228,7 +457,7 @@ public class Storage {
      * @return A reconstructed Note object, or null if parsing fails
      */
     private Note parseSaveFile(String line) {
-        if (line.isBlank()) {
+        if (line == null || line.isBlank()) {
             return null;
         }
 
@@ -237,16 +466,16 @@ public class Storage {
             String id = fields[0];
             String title = fields[1];
             String filename = fields[2];
-            String body = fields[3].replace("\\n", "\n"); // Unescape newlines
-            Instant createdAt = Instant.parse(fields[4]);
-            Instant modifiedAt = Instant.parse(fields[5]);
-            boolean pinned = fields[6].equals("1");
-            boolean archived = fields[7].equals("1");
-            String archiveName = fields[8].isEmpty() ? null : fields[8];
+            String body = ""; // set temporary empty body
+            Instant createdAt = Instant.parse(fields[3]);
+            Instant modifiedAt = Instant.parse(fields[4]);
+            boolean pinned = fields[5].equals("1");
+            boolean archived = fields[6].equals("1");
+            String archiveName = fields[7].isEmpty() ? null : fields[7];
 
             List<String> logs = new ArrayList<>();
-            if (fields.length > 9 && !fields[9].isEmpty()) {
-                logs = Arrays.asList(fields[9].split(";;"));
+            if (fields.length > 8 && !fields[8].isEmpty()) {
+                logs = Arrays.asList(fields[8].split(";;"));
             }
 
             return new Note(id, title, filename, body, createdAt, modifiedAt,
